--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,8 @@ footer.page-footer {
   background-color: #334B35;
 }
 
+
+/*************  navigation *************/
 #hamburger {
   /*background-color: #F05A4A;*/
   position: absolute; /* Ensure positioning works within a container */
@@ -99,4 +101,18 @@ footer.page-footer {
 
 .nav-wrapper {
   width: 100%;
+}
+
+.sidenav {
+  right: 0%; /* sollte eigentlich nach rechts bewegen, aber es kommt immer der element.style, transform: transformX(0%), wieso?*/
+}
+
+@media (max-width: 768px) {
+  .welcome_screen {
+    /*to color background*/
+      background-size: 100% 100%;
+      background-position: 0px 0px,0px 0px;
+      background-image: radial-gradient(59% 40% at 114% 39%, #FF5A0000 1%, #FF5A00FF 4%, #FF000000 99%),radial-gradient(50% 50% at 11% 84%, #F2826BFF 0%, #FFF3E8 100%);
+    height: 100vh; /*vh = viewport height*/
+  }
 }
