--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,17 @@
  * Made By MaterializeCSS.com
  */
 @import url('https://fonts.googleapis.com/css2?family=Syncopate&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins');
 
 body {
   background: #FFF3E8;
+}
+
+h1 {
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  font-size: 3rem;
 }
 
 h3 {
@@ -36,6 +44,13 @@ nav .brand-logo {
 
 #logo-container {
   text-transform: uppercase;
+  font-family: 'Syncopate', sans-serif;
+  font-weight: bolder;
+  color: black;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .highlights {
@@ -48,6 +63,20 @@ p {
 
 .sidenav-trigger {
   color: #334B35;
+}
+
+form {
+  padding: 2rem;
+}
+
+label {
+  font-size: 1rem;
+  color: #888888;
+}
+
+.text-input {
+  border-radius: 5px;
+  margin: 10px 0 10px 0;
 }
 
 .parallax-container {
@@ -88,6 +117,15 @@ footer.page-footer {
   background-color: #334B35;
 }
 
+/*************  Buttons & links *************/
+.button {
+  font-size: 1.5rem;
+  background-color: #F05A49;
+  color: #FFF3E8;
+  padding: 5px 15px 5px 15px;
+  border-radius: 5px;
+  border: none;
+}
 
 /*************  navigation *************/
   #hamburger {
