--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Syncopate&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins');
 
+:root {
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
   background: #FFF3E8;
 }
@@ -27,6 +31,11 @@ h3 {
 
 h4 {
   color: black;
+  font-size: 2rem;
+  text-align: center;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 50px;
 }
 
 .logo {
@@ -57,6 +66,24 @@ nav .brand-logo {
   color: #F05A4A;
 }
 
+.upper-sparkle {
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-end;
+}
+
+.lower-sparkle {
+  display: flex;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+
+.cat-container {
+  display: flex;
+  align-content: flex-end;
+  justify-content: flex-start;
+}
+
 p {
   line-height: 2rem;
 }
@@ -77,6 +104,10 @@ label {
 .text-input {
   border-radius: 5px;
   margin: 10px 0 10px 0;
+}
+
+.text-container {
+  padding: 10rem 5rem 20rem 5rem;
 }
 
 .parallax-container {
@@ -163,6 +194,12 @@ input:focus {
   outline: none;
 }
 
+.link {
+  font-size: 2.28rem;
+  color: #F05A4A;
+  text-decoration: underline;
+}
+
 /*************  navigation *************/
   #hamburger {
     /*background-color: #F05A4A;*/
@@ -183,12 +220,11 @@ input:focus {
 
 /********** custom colors **************/
   @media (max-width: 768px) {
-    .welcome_screen {
+    .welcome-screen {
       /*to color background*/
         background-size: 100% 100%;
         background-position: 0px 0px,0px 0px;
         background-image: radial-gradient(59% 40% at 114% 39%, #FF5A0000 1%, #FF5A00FF 4%, #FF000000 99%),radial-gradient(50% 50% at 11% 84%, #F2826BFF 0%, #FFF3E8 100%);
-      height: 100vh; /*vh = viewport height*/
     }
   }
 
