--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,10 @@ input:focus {
     padding: 10px;
   } 
 
-  /*
+  
   * {
     border: 2px solid #333;
-  }*/
+  }
 
   .section {
     width: 100%;
@@ -631,19 +631,38 @@ input:focus {
   transition: transform 0.2s ease-in-out;
 }
 
-.circle:hover {
-  transform: scale(1.3);
-}
+
+
+/****** TEAM Member section on main page **********/
 
 /* Style the text below the image */
 .caption {
-  position: absolute; /* Allows precise positioning */
-  bottom: 10px; /* Position the text in the bottom half of the image */
+  position: relative; /* Allows precise positioning */
+  bottom: 0px; /* Position the text in the bottom half of the image */
   /*left: 150%; /* Center-align the text horizontally */
-  transform: translateX(-50%); /* Adjust for horizontal centering */
   color: rgb(255, 255, 255); /* Optional: Text color */
   font-size: 16px; /* Adjust text size */
   font-weight: bold; /* Optional: Bold text */
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Optional: Shadow for readability */
   pointer-events: none; /* Prevent text from interfering with the link click */
+  transition: transform 0.5s ease-in-out;
+}
+
+.image_caption_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.2s ease-in-out;
+  padding-bottom: 20px;
+}
+
+
+.image_caption_container:hover .circle{
+  transform: scale(1.1);
+}
+
+.image_caption_container:hover .caption{
+  transform: scale(1.1) rotate(360deg);
+  transform-origin: 20px  140px;
+  
 }
