small changes in css

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ h2 {
   text-align: center;
   font-weight: bold;
   margin-bottom: 10px;
+  font-size: 44px;
 }
 
 h3 {
@@ -364,12 +365,11 @@ input:focus {
   background-color: var(--mainColor);
   color: var(--mainColor2);
   padding: 20px;
+  text-align: center;
 }
 
 .skills h2 {
   color: var(--mainColor2);
-  text-transform: uppercase;
-  margin: 1.5rem 0;
 }
 
 
@@ -509,12 +509,11 @@ input:focus {
   background-color: var(--mainColor);
   color: var(--mainColor2);
   padding: 20px;
+  text-align: center;
 }
 
 .education h2 {
   color: var(--mainColor2);
-  font-weight: bold;
-  margin-bottom: 10px;
 }
 
 .education-item {
@@ -536,8 +535,8 @@ input:focus {
 
 /********** Experience-Section **************/
 .experience {
-  background-color: #F8F1E7;
   padding: 20px;
+  text-align: center;
 }
 
 .job {
@@ -565,6 +564,7 @@ input:focus {
   background-color: var(--mainColor);
   color: var(--mainColor2);
   padding: 20px;
+  text-align: center;
 }
 
 .language h2 {
@@ -593,7 +593,6 @@ input:focus {
 .hobbies {
   text-align: center;
   padding: 20px;
-  background-color: var(--mainColor2);
 }
 
 .hobbies h3 {
