--- a/css/style.css
+++ b/css/style.css
@@ -375,15 +375,24 @@ input:focus {
 
 .skills-container {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   margin-bottom: 15px;
 }
 
 .skills h3 {
   color: var(--mainColor2);
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.skills-container p {
+  margin: 10px 0 ;
+  font-size: 1.3rem;
+  color: var(--mainColor2);
 }
 
 .icons {
