new position of welcome text

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ label {
 }
 
 .text-container {
-  padding: 10rem 5rem 20rem 5rem;
+  /* padding: 10rem 5rem 20rem 5rem; */
 }
 
 .parallax-container {
@@ -275,7 +275,10 @@ input:focus {
 }
 
 .text-container {
-  padding: 10rem 5rem 20rem 5rem;
+  /* padding: 10rem 5rem 20rem 5rem; */
+  /* padding-bottom: 40vh; */
+  position: absolute;
+  top: 30%;
 }
 
 .red-cursor {
