--- a/css/style.css
+++ b/css/style.css
@@ -362,16 +362,31 @@ input:focus {
 }
 
   /*comment*/
-  /* * {
+  * {
     border: 2px solid #333;
-  } */
+  }
+
+
+    .grid-container {
+      display: block; /* Default behavior for smaller screens */
+    }
 
   .section {
     width: 100%;
     margin: 0;
     padding: 0;
   }
+  @media (min-width: 993px) {
+    .grid-container {
+      display: grid; /* Switch to grid layout */
+      grid-template-columns: 1fr 1fr; /* Two equal-width columns */
+      gap: 10px; /* Space between columns */
+    }
 
+    .grid-item {
+      margin-bottom: 0; /* Remove bottom margin when using grid */
+    }
+  }
 
 /********** Profil-Section **************/
 
