--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,16 @@ input:focus {
   position: absolute;
   top: 55%;
   right: 10%;
+  /* animation: mouseMove 4s infinite; */
+  z-index: 50;
 }
+
+/* @keyframes mouseMove {
+  0% {right: 20%;}
+  50% {right: 10%;top: 70%;scale: 100%;}
+  70% {right:70%;top:80%;scale: 50%;}
+  100% {right: 20%;}
+} */
 
 .lower-sparkle {
   position: absolute;
@@ -834,7 +843,36 @@ input:focus {
   transition: transform 0.2s ease-in-out;
 }
 
+.cat-eyes-container {
+  position: absolute;
+  display: flex;
+  top: 27px;
+  left: 35px;
+  gap: 8px;
+}
 
+.eye {
+  width: 23px;
+  height: 20px;
+  /* border-radius: 50%; */
+  background-color: black;
+  animation: moveUpDown 6s infinite;
+}
+
+.slow-eye {
+  animation: moveUpDownFast 12s infinite;
+}
+
+@keyframes moveUpDown {
+    0%, 92% {height: 20px; /* Normal eye height */}
+    96% {height: 50px; /* Blinking - eye squishes */}
+    100% {height: 20px; /* Eye returns to normal */}
+}
+@keyframes moveUpDownFast {
+  0%, 96% {height: 20px; /* Normal eye height */}
+  98% {height: 50px; /* Blinking - eye squishes */}
+  100% {height: 20px; /* Eye returns to normal */}
+}
 
 /****** TEAM Member section on main page **********/
 
